--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <section class="section-1">
       <div class="section-con">
         <div fetchpriority="high" class="main-copy">
-          <div fetchpriority="high" class="main-copy-wrap">
+          <div class="main-copy-wrap">
             <span class="t-bold"> * GK * Transforming Raw Marble into Timeless Beauty.</span>
           </div>
-          <div fetchpriority="high" class="main-copy-wrap">
+          <div class="main-copy-wrap">
             <span class="t-bold"> * GK * Transforming Raw Marble into Timeless Beauty.</span>
           </div>
-          <div fetchpriority="high" class="main-copy-wrap">
+          <div class="main-copy-wrap">
             <span class="t-bold"> * GK * Transforming Raw Marble into Timeless Beauty.</span>
           </div>
         </div>
